Fix header causing overflow.

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -51,3 +51,7 @@ h1,h2{
     margin-top: auto;
     color: black;
 }
+
+.hstack {
+    width: 100%
+}
